--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <h3 class="text-xl font-bold mb-4">Backend</h3>
                     <p class="text-gray-400 mb-6 text-sm">Разрабатываю логику сервера, API и работаю с базами данных.</p>
                     <div class="flex flex-wrap gap-2">
-                        <span class="px-3 py-1 bg-white/5 rounded-full text-xs border border-white/10">Laravel</span>
+                        <span class="px-3 py-1 bg-white/5 rounded-full text-xs border border-white/10">Php</span>
                         <span class="px-3 py-1 bg-white/5 rounded-full text-xs border border-white/10">Node JS</span>
                         <span class="px-3 py-1 bg-white/5 rounded-full text-xs border border-white/10">MySQL</span>
                     </div>
@@ -470,4 +470,5 @@
         </div>
     </section>
 </body>
+
 </html>
