--- a/index.html
+++ b/index.html
@@ -187,6 +187,54 @@
                 </div>
             </div>
         </div>
+        <div>
+            <h3 class="text-2xl md:text-3xl font-bold text-center mb-10">Что я разрабатываю</h3>
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+                    
+                <div class="glass p-6 rounded-2xl flex items-center gap-4 hover:bg-white/10 transition-colors group cursor-default">
+                    <div class="w-12 h-12 rounded-xl bg-blue-500/20 flex items-center justify-center text-blue-400 group-hover:scale-110 transition-transform">
+                        <i class="fas fa-id-card text-lg"></i>
+                    </div>
+                    <span class="font-semibold text-gray-200">Сайты-визитки</span>
+                </div>
+
+                <div class="glass p-6 rounded-2xl flex items-center gap-4 hover:bg-white/10 transition-colors group cursor-default">
+                    <div class="w-12 h-12 rounded-xl bg-purple-500/20 flex items-center justify-center text-purple-400 group-hover:scale-110 transition-transform">
+                        <i class="fas fa-layer-group text-lg"></i>
+                    </div>
+                    <span class="font-semibold text-gray-200">Многостраничные сайты</span>
+                </div>
+
+                <div class="glass p-6 rounded-2xl flex items-center gap-4 hover:bg-white/10 transition-colors group cursor-default">
+                     <div class="w-12 h-12 rounded-xl bg-green-500/20 flex items-center justify-center text-green-400 group-hover:scale-110 transition-transform">
+                        <i class="fas fa-network-wired text-lg"></i>
+                    </div>
+                    <span class="font-semibold text-gray-200">REST API</span>
+                </div>
+
+                <div class="glass p-6 rounded-2xl flex items-center gap-4 hover:bg-white/10 transition-colors group cursor-default">
+                    <div class="w-12 h-12 rounded-xl bg-red-500/20 flex items-center justify-center text-red-400 group-hover:scale-110 transition-transform">
+                        <i class="fas fa-chart-line text-lg"></i>
+                    </div>
+                    <span class="font-semibold text-gray-200">Дашборды</span>
+                </div>
+
+                <div class="glass p-6 rounded-2xl flex items-center gap-4 hover:bg-white/10 transition-colors group cursor-default">
+                    <div class="w-12 h-12 rounded-xl bg-yellow-500/20 flex items-center justify-center text-yellow-400 group-hover:scale-110 transition-transform">
+                        <i class="fas fa-gamepad text-lg"></i>
+                    </div>
+                    <span class="font-semibold text-gray-200">Стили для GameStores</span>
+                </div>
+
+                <div class="glass p-6 rounded-2xl flex items-center gap-4 hover:bg-white/10 transition-colors group cursor-default">
+                    <div class="w-12 h-12 rounded-xl bg-indigo-500/20 flex items-center justify-center text-indigo-400 group-hover:scale-110 transition-transform">
+                        <i class="fas fa-robot text-lg"></i>
+                    </div>
+                    <span class="font-semibold text-gray-200">ВК, ТГ, ДС Боты</span>
+                </div>
+
+            </div>
+        </div>
     </section>
 
     <section id="projects" class="py-20">
@@ -498,5 +546,6 @@
 </body>
 
 </html>
+
 
 
