--- a/index.html
+++ b/index.html
@@ -191,21 +191,21 @@
 
     <section class="py-20 relative">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-2xl md:text-3xl font-bold text-center mb-10">Что я разрабатываю</h3>
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-16">Что я разрабатываю</h2>
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
                     
                 <div class="glass p-6 rounded-2xl flex items-center gap-4 hover:bg-white/10 transition-colors group cursor-default">
                     <div class="w-12 h-12 rounded-xl bg-blue-500/20 flex items-center justify-center text-blue-400 group-hover:scale-110 transition-transform">
                         <i class="fas fa-id-card text-lg"></i>
                     </div>
-                    <span class="font-semibold text-gray-200">Сайты-визитки</span>
+                    <span class="font-semibold text-gray-200">Сайты</span>
                 </div>
 
                 <div class="glass p-6 rounded-2xl flex items-center gap-4 hover:bg-white/10 transition-colors group cursor-default">
                     <div class="w-12 h-12 rounded-xl bg-purple-500/20 flex items-center justify-center text-purple-400 group-hover:scale-110 transition-transform">
                         <i class="fas fa-layer-group text-lg"></i>
                     </div>
-                    <span class="font-semibold text-gray-200">Многостраничные сайты</span>
+                    <span class="font-semibold text-gray-200">Веб-приложения</span>
                 </div>
 
                 <div class="glass p-6 rounded-2xl flex items-center gap-4 hover:bg-white/10 transition-colors group cursor-default">
@@ -233,7 +233,7 @@
                     <div class="w-12 h-12 rounded-xl bg-indigo-500/20 flex items-center justify-center text-indigo-400 group-hover:scale-110 transition-transform">
                         <i class="fas fa-robot text-lg"></i>
                     </div>
-                    <span class="font-semibold text-gray-200">ВК, ТГ, ДС Боты</span>
+                    <span class="font-semibold text-gray-200">VK, TG, DS Боты</span>
                 </div>
 
             </div>
@@ -549,6 +549,7 @@
 </body>
 
 </html>
+
 
 
 
