--- a/index.html
+++ b/index.html
@@ -513,6 +513,29 @@
                     </div>
                 </div>
 
+                <div class="glass overflow-hidden group project-item fade-in" data-category="gamestores">
+                    <div class="h-48 bg-slate-800 relative overflow-hidden">
+                        <img src="app/assets/gs8.png" alt="Game Store" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110 opacity-80 group-hover:opacity-100">
+                        <div class="absolute inset-0 bg-gradient-to-t from-slate-900 to-transparent"></div>
+                    </div>
+                    <div class="p-6 relative">
+                        <div class="absolute -top-10 right-6 bg-yellow-600 w-12 h-12 rounded-full flex items-center justify-center shadow-lg transform group-hover:scale-110 transition-transform">
+                            <i class="fas fa-shopping-cart text-white"></i>
+                        </div>
+                        <h3 class="text-2xl font-bold mb-2">Emerald Style</h3>
+                        <p class="text-gray-400 mb-4 text-sm">Стиль с акцентом на зелёный цвет.</p>
+                        <div class="flex flex-wrap gap-2 mb-6">
+                            <span class="text-xs font-mono text-purple-300">#JS</span>
+                            <span class="text-xs font-mono text-purple-300">#CSS</span>
+                            <span class="text-xs font-mono text-purple-300">#SwiperJS</span>
+                            <span class="text-xs font-mono text-purple-300">#RustAppAPI</span>
+                        </div>
+                        <div class="flex gap-4">
+                            <a target="_blank" href="app/assets/gs8.png" class="text-white hover:text-blue-400 font-medium transition-colors">Посмотреть <i class="fas fa-external-link-alt text-xs ml-1"></i></a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
@@ -549,6 +572,7 @@
 </body>
 
 </html>
+
 
 
 
